--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+# Core
 torch>=2.0.0
-transformers>=4.30.0
-datasets>=2.12.0
 tiktoken>=0.5.0
-numpy>=1.24.0
-tqdm>=4.65.0
+datasets>=2.20.0
+pyyaml>=6.0.0
+
+# MLflow evaluation
+mlflow>=2.0.0
+pandas>=2.0.0
+
+# Optional: mid-epoch checkpointing for streaming
+# torchdata>=0.8.0
