--- a/pre-train/experiments/SmallGPT2-Samples2M.yaml
+++ b/pre-train/experiments/SmallGPT2-Samples2M.yaml
@@ -8,14 +8,16 @@ training:
   learning_rate: 0.0003
   weight_decay: 0.1
   gradient_clip: 1.0
-  warmup_steps: 500
+  warmup_steps: 2000
+  total_steps: 300000
+  min_learning_rate: 3.0e-05
 evaluation:
   eval_freq: 500
   eval_iters: 20
   save_every_n_iterations: 1000
 storage:
   base_folder: E:\GPT_SANDBOX_STORAGE
-  checkpoint_to_resume: checkpoint_step_159650.pt
+  checkpoint_to_resume: checkpoint_step_182676.pt
 hardware:
   device: cuda
 runtime:
